remove v1 and v2
